syntax = "proto3";

package ax;
option go_package = "ax";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// EnvelopeProto is a Protocol Buffers representation of an Envelope.
message EnvelopeProto {
	string message_id  = 1;
	string causation_id  = 2;
	string correlation_id  = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp send_at = 5;
    google.protobuf.Any message = 6;
}
